--- a/PhilipsHue/PhilipsHue.csproj
+++ b/PhilipsHue/PhilipsHue.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>PhilipsHue</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
